--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,13 @@ html {
   font-size: 1.5rem;
 }
 
+.editor_container {
+  height: 80vh;
+  width: 90vw;
+  border: 1px solid black;
+  overflow: auto;
+}
+
 .submit_button {
   width: 15rem;
   height: 5rem;
@@ -29,6 +36,10 @@ html {
   margin-right: 4.5em;
 }
 
+.memo_box {
+  height: 100%;
+  width: 100%;
+}
 .time_selector {
   width: 15rem;
 }>>>>>>> basic layout with dummy containers
